# rickydata-git

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md
crates/rickydata-git-agent/: Cargo.toml
crates/rickydata-git-agent/src/: lib.rs
crates/rickydata-git-cli/: Cargo.toml
crates/rickydata-git-cli/src/: main.rs
crates/rickydata-git-cli/tests/: cli.rs
crates/rickydata-git-cli/tests/support/: mod.rs
crates/rickydata-git-core/: Cargo.toml
crates/rickydata-git-core/src/: lib.rs
crates/rickydata-git-git/: Cargo.toml
crates/rickydata-git-git/src/: lib.rs
crates/rickydata-git-rdl/: Cargo.toml
crates/rickydata-git-rdl/src/: lib.rs
crates/rickydata-git-relay/: Cargo.toml
crates/rickydata-git-relay/src/: lib.rs  main.rs
docs/: agent-notes-comms.md
docs/adr/: 0001-do-not-fork-git.md  0002-git-compatible-extension-model.md  0003-agentic-discovery-schema.md  0004-work-intent-attempt-provenance.md  0005-rdl-first-language-adapter.md  0006-private-data-s2d-tee-model.md  0007-deployment-distribution-service-model.md  0008-actor-signatures-and-signed-objects.md  0009-signer-tee-integration.md
docs/research/: README.md  rickydata-lang-feedback.md
docs/roadmap/: usable-rickydata-git.md
docs/schemas/: README.md
fixtures/: canonical-hash-vectors.json  work-intent.invalid.json  work-intent.valid.json
scripts/: secret-guard.py  verify.sh
