[workspace]
resolver = "2"
members = [
    "crates/rickydata-git-agent",
    "crates/rickydata-git-cli",
    "crates/rickydata-git-core",
    "crates/rickydata-git-git",
    "crates/rickydata-git-rdl",
    "crates/rickydata-git-relay",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rickycambrian/rickydata-git"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
assert_cmd = "2.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
gix = "0.83.0"
hex = "0.4"
rand = "0.8"
predicates = "3.1"
percent-encoding = "2.3"
rdl-core = { git = "https://github.com/rickycambrian/rickydata-lang", rev = "8e97ba86260e585e2f45aae7a72e1764c19f84c9" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread"] }
tower = "0.5"
uuid = { version = "1.19", features = ["v5", "serde"] }
