[package]
name = "rickydata-git-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rickydata-git-core = { path = "../rickydata-git-core" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
