[package]
name = "rickydata-git-git"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gix.workspace = true
rickydata-git-core = { path = "../rickydata-git-core" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
tempfile.workspace = true
