[package]
name = "rickydata-git-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
ed25519-dalek.workspace = true
percent-encoding.workspace = true
rickydata-git-core = { path = "../rickydata-git-core" }
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
